Added like button to 'now playing' bar. Adjusted light effects.

--- a/SoundByte.UWP/MainShell.xaml
+++ b/SoundByte.UWP/MainShell.xaml
@@ -396,6 +396,12 @@
                             </Button.Flyout>
                         </Button>
 
+                        <Button Margin="5,0"  Foreground="White" Style="{StaticResource CircleButtonStyle}" Background="{x:Null}" Click="{x:Bind Service.LikeTrack}" Width="42" Height="42">
+                            <Button.Content>
+                                <TextBlock OpticalMarginAlignment="TrimSideBearings" Text="{x:Bind Service.LikeIcon, Mode=OneWay}"  FontWeight="Light" FontSize="20" FontFamily="Segoe MDL2 Assets" AutomationProperties.Name="Next" TextAlignment="Center"  />
+                            </Button.Content>
+                        </Button>
+
                     </StackPanel>
 
 
