--- a/SoundByte.UWP/Views/Application/SettingsView.xaml
+++ b/SoundByte.UWP/Views/Application/SettingsView.xaml
@@ -101,7 +101,7 @@
                     <TextBlock Text="About" FontSize="18" Opacity="0.9" FontWeight="SemiBold" VerticalAlignment="Center" Padding="0,2" />
                 </PivotItem.Header>
                 <ScrollViewer HorizontalAlignment="Stretch" Margin="0,0,100,0">
-                    <StackPanel x:Name="StackPanel" Padding="10,0">
+                    <StackPanel x:Name="StackPanel">
                         <TextBlock Opacity="0.7" FontSize="14" Margin="0,10,0,2" HorizontalAlignment="Left" TextWrapping="Wrap" Text="SoundByte is a beautiful SoundCloud &amp; Fanburst client built for Windows 10 devices. Every feature has been hand designed and created for the best possible user experience. Features include listening to sounds, creating sets, receiving notifications, uploading sounds, and much more! " />
 
                         <TextBlock Opacity="0.7" FontSize="14" Margin="0,2,0,2" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Licensed under the MIT License." />
